fix heights and scrollbars

--- a/src/app/components/data-field-list/data-field-list.component.scss
+++ b/src/app/components/data-field-list/data-field-list.component.scss
@@ -7,7 +7,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: calc(100% - 44px);
+  height: 100%;
+  min-height: 0;
 }
 
 .cssLayoutRowStartCenter {
