--- a/src/app/components/invitation-list/invitation-list.component.scss
+++ b/src/app/components/invitation-list/invitation-list.component.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: calc(100% - 60px);
+  height: 100%;
+  min-height: 0;
   overflow-y: hidden;
   margin-left: 5px;
 }
