--- a/src/app/components/msel-view/msel-view.component.scss
+++ b/src/app/components/msel-view/msel-view.component.scss
@@ -13,7 +13,8 @@
 
 .container {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  overflow-y: auto;
   background-color: var(--mat-sys-background);
   color: var(--mat-sys-on-background);
 }
