--- a/src/app/components/player-application-list/player-application-list.component.scss
+++ b/src/app/components/player-application-list/player-application-list.component.scss
@@ -7,7 +7,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: calc(100% - 60px);
+  height: 100%;
+  min-height: 0;
 }
 
 .cssLayoutRowStartCenter {
